--- a/.github/workflows/github.actions.yml
+++ b/.github/workflows/github.actions.yml
@@ -15,3 +15,5 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v3
+      - name: Tests
+        run: docker-compose -f docker-compose.test.yml up --abort-on-container-exit
