--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 server.port=8000
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=validate
+
+spring.datasource.url=${POSTGRES_DATABASE_CONNECTION_URL}
+spring.datasource.username=${POSTGRES_DATABASE_USERNAME}
+spring.datasource.password=${POSTGRES_DATABASE_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
