Fixed postgres url

--- a/test-env-variables.env
+++ b/test-env-variables.env
@@ -1,3 +1,3 @@
-POSTGRES_DATABASE_CONNECTION_URL=jdbc:postgresql://localhost:5432/sonata_authentication_test
+POSTGRES_DATABASE_CONNECTION_URL=jdbc:postgresql://db:5432/postgres
 POSTGRES_DATABASE_USERNAME=postgres
 POSTGRES_DATABASE_PASSWORD=root
