--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,8 +1,8 @@
-server.port=8000
+# Jpa Properties
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.url=${POSTGRES_DATABASE_CONNECTION_URL}
 spring.datasource.username=${POSTGRES_DATABASE_USERNAME}
