Added flyway properties

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -2,9 +2,16 @@
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=validate
 
 spring.datasource.url=${POSTGRES_DATABASE_CONNECTION_URL}
 spring.datasource.username=${POSTGRES_DATABASE_USERNAME}
 spring.datasource.password=${POSTGRES_DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+
+# Flyway properties
+spring.flyway.enabled=true
+spring.flyway.user=${POSTGRES_DATABASE_USERNAME}
+spring.flyway.password=${POSTGRES_DATABASE_PASSWORD}
+spring.flyway.url=${POSTGRES_DATABASE_CONNECTION_URL}
