--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,6 @@
-# Jpa Properties
+# Property file contains the properties that used to configure database connection
+# Also, file contains JPA properties to configure Spring Data and Hibernate
+
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
 spring.jpa.generate-ddl=true
@@ -8,10 +10,3 @@ spring.datasource.url=${POSTGRES_DATABASE_CONNECTION_URL}
 spring.datasource.username=${POSTGRES_DATABASE_USERNAME}
 spring.datasource.password=${POSTGRES_DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
-
-
-# Flyway properties
-spring.flyway.enabled=true
-spring.flyway.user=${POSTGRES_DATABASE_USERNAME}
-spring.flyway.password=${POSTGRES_DATABASE_PASSWORD}
-spring.flyway.url=${POSTGRES_DATABASE_CONNECTION_URL}
