--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -17,9 +17,11 @@ services:
     container_name: db
     ports:
       - "5432:5432"
+    env_file:
+      test-env-variables.env
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=root
+      ACCESS_TOKEN: ${ACCESS_TOKEN}
+
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U postgres" ]
       interval: 10s
