Added env variable

--- a/.github/workflows/github.actions.yml
+++ b/.github/workflows/github.actions.yml
@@ -12,6 +12,8 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    env:
+      ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
     steps:
       - name: checkout
         uses: actions/checkout@v3
