Dto to common (#23)
Changed POM and added maven dependency from github packages.

Moved DTOs to another package, made code refactor

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -12,6 +12,8 @@ services:
         condition: service_healthy
     env_file:
       - test-env-variables.env
+    environment:
+      ACCESS_TOKEN: ${ACCESS_TOKEN}
   db:
     image: 'postgres:13.1-alpine'
     container_name: db
