--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
-spring.config.import=flyway.properties, db.properties
+spring.config.import=flyway.properties, db.properties, eureka-client.properties
 
-server.port=8000
+server.port=0
+
+management.endpoints.web.exposure.include=httpexchanges
+management.httpexchanges.recording.enabled=true
