--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -9,6 +9,7 @@ spring.datasource.username=${POSTGRES_DATABASE_USERNAME}
 spring.datasource.password=${POSTGRES_DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+eureka.client.enabled=false
 
 # Flyway properties
 spring.flyway.enabled=true
