--- a/pom.xml
+++ b/pom.xml
@@ -124,7 +124,7 @@
         </dependency>
 
         <dependency>
-            <groupId>io.micrometer</groupId>`
+            <groupId>io.micrometer</groupId>
             <artifactId>micrometer-tracing</artifactId>
             <version>1.0.0</version>
         </dependency>
