--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.config.import=flyway.properties, db.properties, eureka-client.properties
 
-server.port=0
+server.port=9000
 
 management.endpoints.web.exposure.include=httpexchanges
 management.httpexchanges.recording.enabled=true
+
+
+kafka.connection.url=localhost:29092
+#spring.kafka.producer.properties.spring.json.add.type.headers=false
