--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-contract-verifier</artifactId>
+            <scope>test</scope>
+        </dependency>
+
         <!--        //-->
 
         <dependency>
@@ -158,6 +164,8 @@
             <artifactId>spring-cloud-contract-maven-plugin</artifactId>
             <version>4.0.3</version>
         </dependency>
+
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
