Added password changing logic (#27)
Added password changing logic

--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
         <dependency>
             <groupId>com.odeyalo.sonata</groupId>
             <artifactId>suite</artifactId>
-            <version>0.0.5</version>
+            <version>0.0.6</version>
         </dependency>
 
         <dependency>
@@ -125,7 +125,13 @@
             <scope>test</scope>
         </dependency>
 
-<!--        //-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-contract-verifier</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <!--        //-->
 
         <dependency>
             <groupId>io.micrometer</groupId>
@@ -152,6 +158,14 @@
             <artifactId>opentelemetry-exporter-zipkin</artifactId>
             <version>1.0.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-contract-maven-plugin</artifactId>
+            <version>4.0.3</version>
+        </dependency>
+
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
@@ -179,7 +193,40 @@
                     </excludes>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-contract-maven-plugin</artifactId>
+                <version>4.0.3</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <testMode>EXPLICIT</testMode>
+                    <baseClassMappings>
+                        <baseClassMapping>
+                            <contractPackageRegex>.*password.*</contractPackageRegex>
+                            <baseClassFQN>
+                                com.odeyalo.sonata.authentication.testing.contract.PasswordChangeBaseController
+                            </baseClassFQN>
+                        </baseClassMapping>
+                    </baseClassMappings>
+
+                    <contractsRepositoryUrl>
+                        git://https://github.com/Project-Sonata/Sonata-Contracts.git
+                    </contractsRepositoryUrl>
+                    <failOnNoContracts>false</failOnNoContracts>
+                    <contractsMode>REMOTE</contractsMode>
+                    <contractsRepositoryUsername>${GITHUB_USERNAME}</contractsRepositoryUsername>
+                    <contractsRepositoryPassword>${GITHUB_PASSWORD}</contractsRepositoryPassword>
+
+                    <contractDependency>
+                        <groupId>${project.groupId}</groupId>
+                        <artifactId>${project.artifactId}</artifactId>
+                    </contractDependency>
+                </configuration>
+            </plugin>
         </plugins>
+
+
     </build>
     <repositories>
         <repository>
