--- a/pom.xml
+++ b/pom.xml
@@ -80,13 +80,19 @@
         <dependency>
             <groupId>com.odeyalo.sonata</groupId>
             <artifactId>suite</artifactId>
-            <version>0.0.6</version>
+            <version>0.0.9</version>
         </dependency>
 
         <dependency>
             <groupId>com.odeyalo.sonata.suite</groupId>
             <artifactId>brokers</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.odeyalo.sonata.suite</groupId>
+            <artifactId>servlet</artifactId>
+            <version>0.0.2-SNAPSHOT</version>
         </dependency>
 
         <dependency>
